--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Latest Posts" }}</h2>
+    <h1 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h1>
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li>
@@ -30,8 +30,8 @@ layout: default
   {%- endif -%}
 
   <div class="tweets">
-    <h2 class="post-list-heading">From Twitter</h2>
-    <a class="twitter-timeline" href="https://twitter.com/Jhoff"></a>
+    <h1 class="post-list-heading">Tweets</h1>
+    <a class="twitter-timeline" href="https://twitter.com/Jhoff" data-chrome="nofooter noheader"></a>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 
