--- a/assets/main.scss
+++ b/assets/main.scss
@@ -20,6 +20,11 @@ ul, ol, dl, figure,
   line-height: 1.7;
   }
 
+  /**
+   * Headings
+*/
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 500; }
 
 /**
  * Links
@@ -45,10 +50,10 @@ a {
 .site-header {
     border-top: none;
     border-bottom: none;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 
 .site-logo img {
@@ -72,9 +77,9 @@ a {
     @media screen and (max-width: 600px) {
       .site-nav {
         position: absolute;
-        top: 9px;
-        right: 15px;
-        background-color: #fdfdfd;
+        top: 30px;
+        right: 20px;
+        background-color: #fff;
         border: 1px solid #e8e8e8;
         border-radius: 5px;
         text-align: right; }
@@ -103,7 +108,7 @@ a {
           padding-bottom: 5px; }
         .site-nav .page-link {
           display: block;
-          padding: 5px 10px;
+          padding: 10px 10px;
           margin-left: 20px; }
           .site-nav .page-link:not(:last-child) {
             margin-right: 0; } }
@@ -117,12 +122,13 @@ a {
   padding: 30px 0;
   position: relative;
   padding-left: 20px;
-  padding-right: 20px;
+  padding-right: 25px;
   }
 
 .social-footer {
-  right: 20px;
+  right: 25px;
   position: absolute;
+  bottom: 5px;
 }
 .p-footer {
   margin: 0 0 0 20px;
@@ -154,8 +160,8 @@ font-weight: 500; }
     .wrapper {
       max-width: -webkit-calc(800px - (30px));
       max-width: calc(800px - (30px));
-      padding-right: 20px;
-      padding-left: 20px; } }
+      padding-right: 25px;
+      padding-left: 25px; } }
 
 
 
