--- a/assets/main.scss
+++ b/assets/main.scss
@@ -50,8 +50,8 @@ a {
  * Blockquotes
  */
 blockquote {
-  color: #66757f;
-  border-left: 3px solid #66757f;
+  color: rgba(0,0,0,.6);
+  border-left: 2px solid rgba(0,0,0,.6);
   padding-left: 20px;
   font-size: 18px;
   letter-spacing: -.4px;
@@ -75,7 +75,7 @@ blockquote {
 }
 
 .site-nav .page-link {
-  color: #66757f;
+  color: rgba(0,0,0,.6);
   line-height: 1.5;
   font-size: 16px;
   }
@@ -167,11 +167,17 @@ blockquote {
 
 .post-list-heading {
   font-size: 32px;
-font-weight: 500; }
+  font-weight: 500;
+  margin-bottom: 20px;}
+
+.post-list h3 {
+  margin-bottom: 0px;
+  font-weight: 400;
+}
 
 .post-meta {
   font-size: 14px;
-  color: #66757f; }
+  color: rgba(0,0,0,.6); }
 
 
 /**
@@ -231,7 +237,7 @@ font-weight: 500; }
   width: 16px;
   height: 16px;
   display: inline-block;
-  fill: #66757f;
+  fill: rgba(0,0,0,.6);
   padding-right: 5px;
   vertical-align: text-top; }
 
