--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: default
 
   <div class="tweets">
     <h1 class="post-list-heading">Tweets</h1>
-    <a class="twitter-timeline" href="https://twitter.com/Jhoff" data-chrome="nofooter noheader"></a>
+    <a class="twitter-timeline" href="https://twitter.com/jaymehoffman" data-chrome="nofooter noheader"></a>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 
