lots of changes

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,7 +9,7 @@
 */
 
 body {
-  font: 400 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font: 400 20px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   background-color: #fff;
   color: rgba(0,0,0,.84);
 }
@@ -53,7 +53,7 @@ blockquote {
   color: rgba(0,0,0,.6);
   border-left: 2px solid rgba(0,0,0,.6);
   padding-left: 20px;
-  font-size: 18px;
+  font-size: 20px;
   letter-spacing: -.4px;
   font-style: italic;
   }
@@ -77,7 +77,7 @@ blockquote {
 .site-nav .page-link {
   color: rgba(0,0,0,.6);
   line-height: 1.5;
-  font-size: 16px;
+  font-size: 18px;
   }
 
 .site-logo img {
@@ -152,6 +152,7 @@ blockquote {
   right: 25px;
   position: absolute;
   bottom: 5px;
+  font-size: 16px;
 }
 .p-footer {
   margin: 0 0 0 20px;
@@ -166,7 +167,7 @@ blockquote {
     flex: 1; }
 
 .post-list-heading {
-  font-size: 32px;
+  font-size: 34px;
   font-weight: 600;
   margin-bottom: 20px;}
 
@@ -187,30 +188,30 @@ blockquote {
   margin-bottom: 30px; }
 
 .post-title {
-  font-size: 44px;
+  font-size: 46px;
   letter-spacing: -.2px;
   line-height: 1; }
   @media screen and (max-width: 800px) {
     .post-title {
-      font-size: 38px; } }
+      font-size: 40px; } }
 
 .post-content {
   margin-bottom: 30px; }
   .post-content h2 {
-    font-size: 34px; }
+    font-size: 36px; }
     @media screen and (max-width: 800px) {
       .post-content h2 {
-        font-size: 30px; } }
+        font-size: 32px; } }
   .post-content h3 {
-    font-size: 28px; }
+    font-size: 30px; }
     @media screen and (max-width: 800px) {
       .post-content h3 {
-        font-size: 24px; } }
+        font-size: 26px; } }
   .post-content h4 {
-    font-size: 22px; }
+    font-size: 24px; }
     @media screen and (max-width: 800px) {
       .post-content h4 {
-        font-size: 20px; } }
+        font-size: 22px; } }
 
 
 /**
@@ -239,7 +240,7 @@ blockquote {
   display: inline-block;
   fill: rgba(0,0,0,.6);
   padding-right: 5px;
-  vertical-align: text-top; }
+  vertical-align: baseline; }
 
 /**
 * Twitter feed
