--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,15 +18,25 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 .highlight {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   line-height: 1.7;
   }
 
-  /**
+/**
+  * Images
+*/
+
+img {
+    margin-bottom: 30px;
+    margin-top: 15px;
+}
+
+/**
    * Headings
 */
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 600; }
+  font-weight: 600;
+  margin-top: 30px; }
 
 /**
  * Links
