--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-logo" rel="author" href="{{ "/" | relative_url }}"><img src="/assets/jayme-hoffman-logo.png"></a>
+    <a class="site-logo" rel="author" href="{{ "/" | relative_url }}"><img src="https://res.cloudinary.com/dlamuk5vl/image/upload/v1547185566/jayme-hoffman-logo_c980tn.png"></a>
 
     {%- if page_paths -%}
       <nav class="site-nav">
