--- a/assets/main.scss
+++ b/assets/main.scss
@@ -68,6 +68,7 @@ blockquote {
   font-style: italic;
   font-family: serif;
   margin-top: 20px;
+  margin-bottom: 20px;
   }
   blockquote > :last-child {
     margin-bottom: 0; }
