--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,8 +55,8 @@ layout: default
     </ul>
   {%- endif -%}
 
-  <div class="Tweets">
-    <h1 class="post-list-heading">tweets</h1>
+  <div class="tweets">
+    <h1 class="post-list-heading">Tweets</h1>
     <a class="twitter-timeline" href="https://twitter.com/jaymehoffman" data-chrome="nofooter noheader"></a>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
