--- a/_layouts/external.html
+++ b/_layouts/external.html
@@ -5,5 +5,16 @@
 
     <meta http-equiv="refresh" content="0;url={{ page.external_url }}">
   </head>
-  <body><!-- Google Analytics JavaScript --></body>
+  <body>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124170593-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-124170593-1');
+</script>
+
+  </body>
 </html>
