--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-  <p>I'm an entrepreneur currently working on something new. You can learn more about me <a href="https://jaymehoffman.com/about/">here</a> and contact me <a href="https://jaymehoffman.com/contact/">here</a>.</p>
+  <h3 class="intro-heading">I'm an entrepreneur currently working on something new. You can learn more about me <a href="https://jaymehoffman.com/about/">here</a> and contact me <a href="https://jaymehoffman.com/contact/">here</a>.</h3>
     <h1 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h1>
     <ul class="post-list">
       {%- for post in site.posts limit:3 -%}
