--- a/assets/main.scss
+++ b/assets/main.scss
@@ -38,7 +38,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   margin-top: 30px; }
 
-intro-heading {
+.intro-heading {
   font-weight: 400;
   font-size: 24px; 
   line-height: normal; }
