--- a/assets/main.scss
+++ b/assets/main.scss
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
 .intro-heading {
   font-weight: 400;
   font-size: 24px; 
-  line-height: normal; }
+  line-height: 1.5; }
 
 /**
  * Links
