--- a/assets/main.scss
+++ b/assets/main.scss
@@ -41,7 +41,8 @@ h1, h2, h3, h4, h5, h6 {
 .intro-heading {
   font-weight: 400;
   font-size: 28px; 
-  line-height: 1.5; }
+  line-height: 1.5;
+  padding-bottom: 30px; }
 
 /**
  * Links
