--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-  <h3 class="intro-heading">I'm an entrepreneur currently working on something new. You can learn more about me <a href="https://jaymehoffman.com/about/">here</a> and keep up with me <a href="https://twitter.com/jaymehoffman">here</a>.</h3>
+    <h3 class="intro-heading">Hi, I'm Jayme Hoffman.<br>I'm an entrepreneur, product advisor and breakfast taco fan based in Nashville. I'm currently working on something new. You can learn more <a href="https://jaymehoffman.com/about/">about me here</a> and keep up with me <a href="https://twitter.com/jaymehoffman">here</a>.</h3>
     <h1 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h1>
     <ul class="post-list">
       {%- for post in site.posts limit:3 -%}
