--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
 
   {%- if site.posts.size > 0 -%}
     <h1 class="post-list-heading">Hi, I'm Jayme Hoffman.</h1>
-    <h3 class="intro-heading">I'm an entrepreneur, product advisor and breakfast taco fanatic based in Nashville, Tennessee.</h3>
+    <h3 class="intro-heading">I'm an entrepreneur, product advisor and breakfast taco fanatic based in Nashville.</h3>
     <p class="post-meta">Learn more about me → <a href="https://jaymehoffman.com/about/">jaymehoffman.com/about</a><br>
       Follow me on Twitter → <a href="https://twitter.com/jaymehoffman">@jaymehoffman</a></br>
       See my product stack → <a href="https://yourstack.com/@jaymehoffman">yourstacks.com/@jaymehoffman</a>
