--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,11 @@ layout: default
       Follow me on Twitter → <a href="https://twitter.com/jaymehoffman">@jaymehoffman</a></br>
       See my product stack → <a href="https://yourstack.com/@jaymehoffman">yourstacks.com/@jaymehoffman</a>
     </p>
+    <ul>
+      <li><a href="https://jaymehoffman.com/about/">Learn more about me →</a></li>
+      <li><a href="https://twitter.com/jaymehoffman">Follow me on Twitter → </a></li>
+      <li><a href="https://yourstack.com/@jaymehoffman">See my product stack → </a></li>
+    </ul>
     <h1 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h1>
     <ul class="post-list">
       {%- for post in site.posts limit:3 -%}
