--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,15 +12,16 @@ layout: default
   {%- if site.posts.size > 0 -%}
     <h1 class="post-list-heading">Hi, I'm Jayme Hoffman.</h1>
     <h3 class="intro-heading">I'm an entrepreneur, product advisor and breakfast taco fanatic based in Nashville.</h3>
-    <p class="post-meta">Learn more about me → <a href="https://jaymehoffman.com/about/">jaymehoffman.com/about</a><br>
-      Follow me on Twitter → <a href="https://twitter.com/jaymehoffman">@jaymehoffman</a></br>
-      See my product stack → <a href="https://yourstack.com/@jaymehoffman">yourstacks.com/@jaymehoffman</a>
-    </p>
     <ul>
       <li><a href="https://jaymehoffman.com/about/">Learn more about me →</a></li>
       <li><a href="https://twitter.com/jaymehoffman">Follow me on Twitter → </a></li>
       <li><a href="https://yourstack.com/@jaymehoffman">See my product stack → </a></li>
     </ul>
+    <p>
+      <a href="https://jaymehoffman.com/about/">Learn more about me →</a></br>
+      <a href="https://twitter.com/jaymehoffman">Follow me on Twitter → </a></br>
+      <a href="https://yourstack.com/@jaymehoffman">See my product stack → </a></br>
+    </p>
     <h1 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h1>
     <ul class="post-list">
       {%- for post in site.posts limit:3 -%}
