--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,7 +34,7 @@ layout: default
         {%- endif -%}
       </li>
       {%- endfor -%}
-      <li><a class="post-link-all" href="/posts">See All Posts ></a></li>
+      <li><a class="post-link-all" href="/posts">See All Posts →</a></li>
     </ul>
   {%- endif -%}
   
@@ -58,7 +58,7 @@ layout: default
         {%- endif -%}
       </li>
       {%- endfor -%}
-      <li><a class="post-link-all" href="/mental-models">See All Mental Models ></a></li>
+      <li><a class="post-link-all" href="/mental-models">See All Mental Models →</a></li>
     </ul>
   {%- endif -%}
 
