--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,8 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-  <h1 class="post-list-heading">Hi, I'm Jayme Hoffman.</h1>
+    <h1 class="post-list-heading">Hi, I'm Jayme Hoffman.</h1>
+    <h3 class="intro-heading">Hi, I'm Jayme Hoffman.</h3>
     <h3 class="intro-heading">I'm an entrepreneur, product advisor and breakfast taco fanatic based in Nashville.</h3>
     <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">Learn more about me →</a></p>
     <p><a class="intro-link-all" href="https://twitter.com/jaymehoffman">Follow me on Twitter → </a></p>
