--- a/assets/main.scss
+++ b/assets/main.scss
@@ -288,7 +288,7 @@ a.post-link-all:hover {
  */
 a.intro-link-all {
   color: rgba(0, 0, 0, 0.6);
-  text-transform: capitalize;
+  text-transform: none;
 }
 
 a.intro-link-all:hover {
