--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,10 +12,9 @@ layout: default
   {%- if site.posts.size > 0 -%}
     <h1 class="post-list-heading">Hi, I'm Jayme Hoffman.</h1>
     <h3 class="intro-heading">I'm an entrepreneur, product advisor and breakfast taco fanatic based in Nashville.</h3>
-    <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">Learn more about me →</a></p>
-    <p><a class="intro-link-all" href="https://twitter.com/jaymehoffman">Follow me on Twitter → </a></p>
-    <p><a class="intro-link-all" href="https://yourstack.com/@jaymehoffman">See my product stack → </a></p>
-    
+    <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">About me →</a></p>
+    <p><a class="intro-link-all" href="https://twitter.com/jaymehoffman">Twitter →</a></p>
+    <p><a class="intro-link-all" href="https://www.linkedin.com/in/jaymehoffman/">Linkedin →</a></p>
   <h1 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h1>
     <ul class="post-list">
       {%- for post in site.posts limit:3 -%}
