--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
 
   {%- if site.posts.size > 0 -%}
     <h1 class="post-list-heading">Hi, I'm Jayme.</h1>
-    <h3 class="intro-heading">I'm an entrepreneur, product advisor and breakfast taco fanatic based in Nashville, TN.</h3>
+    <h3 class="intro-heading">I'm the founder and CEO of <a class="intro-link-all" href="https://www.newzip.com/">Newzip</a>, a marketplace for neighborhood advice.</h3>
     <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">About me →</a></p>
     <p><a class="intro-link-all" href="https://twitter.com/jaymehoffman">Twitter →</a></p>
     <p><a class="intro-link-all" href="https://www.linkedin.com/in/jaymehoffman/">Linkedin →</a></p>
