--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,8 +11,9 @@ layout: default
 
   {%- if site.posts.size > 0 -%}
     <h1 class="post-list-heading">Hi, I'm Jayme.</h1>
-    <h3 class="intro-heading">I'm the Co-founder & CEO of <a class="intro-link-all" href="https://www.maindrop.xyz/">Maindrop</a>, a fun and easy way to create and send NFTs to anyone with or without a wallet.</h3>
+    <h3 class="intro-heading">I'm working on something new at <a class="intro-link-all" href="https://www.allthing.xyz//">Allthing</a>.</h3>
     <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">About me →</a></p>
+    <p><a class="intro-link-all" href="https://fcast.me/jayme">Farcaster →</a></p>
     <p><a class="intro-link-all" href="https://twitter.com/jaymehoffman">Twitter →</a></p>
     <p><a class="intro-link-all" href="https://www.linkedin.com/in/jaymehoffman/">Linkedin →</a></p>
   <h1 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h1>
