Removed Linkedin, Updated farcaster

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,9 +13,8 @@ layout: default
     <h1 class="post-list-heading">Hi, I'm Jayme.</h1>
     <h3 class="intro-heading">I'm working on something new at <a class="intro-link-all" href="https://www.allthing.xyz//">Allthing</a>.</h3>
     <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">About me →</a></p>
-    <p><a class="intro-link-all" href="https://fcast.me/jayme">Farcaster →</a></p>
+    <p><a class="intro-link-all" href="https://warpcast.com/jayme">Farcaster →</a></p>
     <p><a class="intro-link-all" href="https://twitter.com/jaymehoffman">Twitter →</a></p>
-    <p><a class="intro-link-all" href="https://www.linkedin.com/in/jaymehoffman/">Linkedin →</a></p>
   <h1 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h1>
     <ul class="post-list">
       {%- for post in site.posts limit:3 -%}
