--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
 
   {%- if site.posts.size > 0 -%}
     <h1 class="post-list-heading">Hi, I'm Jayme.</h1>
-    <h3 class="intro-heading">I'm working on something new at <a class="intro-link-all" href="https://www.allthing.xyz//">Allthing</a>.</h3>
+    <h3 class="intro-heading">I'm working on consumer crypo at <a class="intro-link-all" href="https://launcher.xyz/">Launcher.xyz</a>.</h3>
     <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">About me →</a></p>
     <p><a class="intro-link-all" href="https://warpcast.com/jayme">Farcaster →</a></p>
     <p><a class="intro-link-all" href="https://twitter.com/jaymehoffman">Twitter →</a></p>
