--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,8 @@ layout: default
 
   {%- if site.posts.size > 0 -%}
     <h1 class="post-list-heading">Hi, I'm Jayme.</h1>
-    <h3 class="intro-heading">I'm working on consumer crypo at <a class="intro-link-all" href="https://launcher.xyz/">Launcher.xyz</a>.</h3>
+    <h3 class="intro-heading">I'm working on 
+      <a class="intro-link-all" href="https://www.launchcaster.xyz/">Launchcaster</a> and <a class="intro-link-all" href="https://www.frameboard.com/">Frameboard</a>.</h3>
     <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">About me →</a></p>
     <p><a class="intro-link-all" href="https://warpcast.com/jayme">Farcaster →</a></p>
     <p><a class="intro-link-all" href="https://twitter.com/jaymehoffman">Twitter →</a></p>
@@ -36,30 +37,6 @@ layout: default
     </ul>
   {%- endif -%}
   
-  {%- if site.mental-models.size > 0 -%}
-    <h1 class="post-list-heading">{{ page.list_title | default: "Mental Models" }}</h1>
-    <ul class="post-list">
-      {%- assign model-list = site.mental-models | reverse -%}
-      {%- for post in model-list limit:3 -%}
-
-      <li>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </li>
-      {%- endfor -%}
-      <li><a class="post-link-all" href="/mental-models">See All Mental Models →</a></li>
-    </ul>
-  {%- endif -%}
-
   <div class="tweets">
     <h1 class="post-list-heading">Tweets</h1>
     <a class="twitter-timeline" href="https://twitter.com/jaymehoffman" data-chrome="nofooter noheader"></a>
