--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: default
       <a class="intro-link-all" href="https://www.launchcaster.xyz/">Launchcaster</a> and <a class="intro-link-all" href="https://www.frameboard.com/">Frameboard</a>.</h3>
     <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">About me →</a></p>
     <p><a class="intro-link-all" href="https://warpcast.com/jayme">Farcaster →</a></p>
-    <p><a class="intro-link-all" href="https://twitter.com/jaymehoffman">Twitter →</a></p>
+    <p><a class="intro-link-all" href="https://paragraph.xyz/@jayme/">Newsletter →</a></p>
   <h1 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h1>
     <ul class="post-list">
       {%- for post in site.posts limit:3 -%}
