--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h1 class="post-list-heading">Hi, I'm Jayme.</h1>
+    <h1 class="post-list-heading">Jayme Hoffman</h1>
     <h3 class="intro-heading">I'm working on 
       <a class="intro-link-all" href="https://www.launchcaster.xyz/">Launchcaster</a> and <a class="intro-link-all" href="https://www.frameboard.com/">Frameboard</a>.</h3>
     <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">About me →</a></p>
