updated home and about

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,10 +10,10 @@ layout: default
   {{ content }}
 
   <h1 class="post-list-heading">Jayme Hoffman</h1>
-  <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">About me →</a></p>
-  <p><a class="intro-link-all" href="https://warpcast.com/jayme">Farcaster →</a></p>
-  <p><a class="intro-link-all" href="https://paragraph.xyz/@jayme/">Newsletter →</a></p>
-    
+  <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">About →</a></p>
+  <p><a class="intro-link-all" href="https://x.com/jaymehoffman">X: @jaymehoffman →</a></p>
+  <p><a class="intro-link-all" href="https://warpcast.com/jayme">Farcaster: @jayme →</a></p>
+
   <div class="tweets">
     <h1 class="post-list-heading">X</h1>
     <a class="twitter-timeline" href="https://twitter.com/jaymehoffman" data-chrome="nofooter noheader"></a>
