--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,9 +10,9 @@ layout: default
   {{ content }}
 
   <h1 class="post-list-heading">Jayme Hoffman</h1>
-  <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">About →</a></p>
-  <p><a class="intro-link-all" href="https://x.com/jaymehoffman">X: @jaymehoffman →</a></p>
-  <p><a class="intro-link-all" href="https://warpcast.com/jayme">Farcaster: @jayme →</a></p>
+  <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">More about me →</a></p>
+  <p><a class="intro-link-all" href="https://warpcast.com/jayme">Follow on Farcaster →</a></p>
+  <p><a class="intro-link-all" href="https://x.com/jaymehoffman">Follow on X →</a></p>
 
   <div class="tweets">
     <h1 class="post-list-heading">X</h1>
