updated home and about one last time

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,9 +10,10 @@ layout: default
   {{ content }}
 
   <h1 class="post-list-heading">Jayme Hoffman</h1>
-  <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">More about me →</a></p>
-  <p><a class="intro-link-all" href="https://warpcast.com/jayme">Follow on Farcaster →</a></p>
-  <p><a class="intro-link-all" href="https://x.com/jaymehoffman">Follow on X →</a></p>
+  <h3 class="intro-heading">Product designer, developer, and entrepreneur.</h3>
+  <p><a class="intro-link-all" href="https://jaymehoffman.com/about/">About me →</a></p>
+  <p><a class="intro-link-all" href="https://x.com/jaymehoffman">X @JaymeHoffman →</a></p>
+  <p><a class="intro-link-all" href="https://warpcast.com/jayme">Farcaster @Jayme→</a></p>
 
   <div class="tweets">
     <h1 class="post-list-heading">X</h1>
