--- a/static/style.css
+++ b/static/style.css
@@ -55,6 +55,26 @@ ul {
     color: #000;
 }
 
+/* Blockquotes */
+blockquote {
+    margin: 1.5em 0;
+    padding-left: 1em;
+    border-left: 4px solid #eaeaea;
+}
+
+blockquote p {
+    margin: 0;
+}
+
+blockquote p:first-child {
+    font-style: italic;
+    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+}
+
+blockquote p:last-child {
+    opacity: 0.5;
+}
+
 /* Media Queries */
 @media screen and (max-width: 600px) {
     body {
